Fix model viewer checkbox alignment.

--- a/src/css/models.scss
+++ b/src/css/models.scss
@@ -61,7 +61,6 @@
   }
 
   input {
-    vertical-align: sub;
     margin-right: 0.25em;
   }
 }
